--- a/main.html
+++ b/main.html
@@ -7,7 +7,37 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<table>
+		<tr>
+			<th>Roll Number</th>
+			<th>Names</th>
+		</tr>
+		<tr>
+			<td>27</td>
+			<td> Meera</td>
+		</tr>
+		<tr>
+			<td>28</td>
+			<td>Riya</td>
+		</tr>
+	</table>
+	<h1>List of medias</h1>
+	<ol>
+		<li>
+			<img src="https://picsum.photos/id/123/200/300" alt="image" width="200px" height="200px">
+		</li>
+		<li>
+			<video width="300px" controls>
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"  type="video/mp4">
+			</video>
+		</li>
+		<li>
+			<audio controls >
+				<source src="http://commondatastorage.googleapis">
+			</audio>
+		</li>
+	</ol>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
