--- a/main.html
+++ b/main.html
@@ -8,18 +8,22 @@
 
 <body>
 	<table>
-		<tr>
-			<th>Roll Number</th>
-			<th>Names</th>
-		</tr>
-		<tr>
-			<td>27</td>
-			<td> Meera</td>
-		</tr>
-		<tr>
-			<td>28</td>
-			<td>Riya</td>
-		</tr>
+		<thead>
+			<tr>
+				<th>Roll Number</th>
+				<th>Names</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>27</td>
+				<td> Meera</td>
+			</tr>
+			<tr>
+				<td>28</td>
+				<td>Riya</td>
+			</tr>
+		</tbody>
 	</table>
 	<h1>List of medias</h1>
 	<ol>
@@ -32,9 +36,7 @@
 			</video>
 		</li>
 		<li>
-			<audio controls >
-				<source src="http://commondatastorage.googleapis">
-			</audio>
+			<audio  src="http://commondatastorage.googleapis" controls ></audio>
 		</li>
 	</ol>
 	
