--- a/main.html
+++ b/main.html
@@ -36,7 +36,9 @@
 			</video>
 		</li>
 		<li>
-			<audio  src="http://commondatastorage.googleapis" controls ></audio>
+			<audio  controls >
+				<source src="http://commondatastorage.googleapis" type="audio/mpeg">
+			</audio>
 		</li>
 	</ol>
 	
