--- a/main.html
+++ b/main.html
@@ -23,6 +23,10 @@
 				<td>28</td>
 				<td>Riya</td>
 			</tr>
+			<tr>
+				<td>29</td>
+				<td>Priya</td>
+			</tr>
 		</tbody>
 	</table>
 	<h1>List of medias</h1>
@@ -37,7 +41,7 @@
 		</li>
 		<li>
 			<audio  controls >
-				<source src="http://commondatastorage.googleapis" type="audio/mpeg">
+				<source src="http://commondatastorage.googleapis" type="audio/ogg">
 			</audio>
 		</li>
 	</ol>
