--- a/main.html
+++ b/main.html
@@ -40,8 +40,7 @@
 			</video>
 		</li>
 		<li>
-			<audio  controls  >
-				<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+			<audio  controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg" >
 			</audio>
 		</li>
 	</ol>
